# scenario-validation-criteria

./: .gitignore  CITATION.cff  CNAME  DESCRIPTION  NAMESPACE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs-latest.yml  docs-release.yml
R/: loading.R  scenariovalidationcriteria-package.R
docs/: index.md  summary.md
docs/code/: python.md
docs/components/: descriptions.md  index.md  reference_data.md  sources.md  thresholds.md  types.md
docs/partials/: sources.md  summary.md  thresholds.md  types.md
docs/tutorials/: R.py  basic.md  index.md  python.py  raw.md
inst/extdata/: criteria-types.yaml  sources.bib
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/components/: index.html
latest/descriptions/: index.html
latest/nav/: index.html
latest/reference_data/: index.html
latest/search/: search_index.json
latest/sources/: index.html
latest/summary/: index.html
latest/thresholds/: index.html
latest/tutorials/: index.html
latest/types/: index.html
man/: load_criteria.Rd  scenariovalidationcriteria-package.Rd
pr15-update-readme-docs/: 404.html  index.html  sitemap.xml
pr15-update-readme-docs/summary/: index.html
pr19-rename-outcome-columns-values/: 404.html  index.html  sitemap.xml
pr21-feasibility-solar-pv-note/: 404.html  index.html  sitemap.xml
pr22-updated-logo/: 404.html  index.html  sitemap.xml
scripts/: build_copy_extdata.py  gen_pages.py  mkdocs_macros.py
tests/: conftest.py  test_bibliography.py  test_criteria.py  test_reference_data.py  test_structure.py  utils.py
(+91 files in other folders)
