[project]
name = "scenario-validation-criteria"
description = "Common definitions of validation criteria for IAM scenarios"
authors = [
    { name = "Philipp C. Verpoort", email = "philipp.verpoort@pik-potsdam.de" },
    { name = "Tomoko Hasegawa", email = "thase@fc.ritsumei.ac.jp" },
    { name = "Pascal Weigmann", email = "pascal.weigmann@pik-potsdam.de" },
    { name = "Daniel Huppmann", email = "huppmann@iiasa.ac.at" },
    { name = "Karl Scheifinger", email = "scheifinger@iiasa.ac.at" },
    { name = "Gunnar Luderer", email = "luderer@pik-potsdam.de" },
]
license = "MIT"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "nomenclature-iamc (>=0.30.0,<2.0)",
]

[project.urls]
Repository = "https://github.com/IAMconsortium/scenario-validation-criteria/"

[project.optional-dependencies]
formatting = ["pybtex>=0.25.1"]

[tool.poetry]
packages = [
    { include = "scenario_validation_criteria", from = "python" },
]

[tool.poetry.build]
generate-setup-file = false
script = "scripts/build_copy_extdata.py"

[tool.poetry.group.devtools.dependencies]
pytest = "^8.0"
pycountry = "^24.0"
ruff = "^0.12.1"
pyyaml = "^6.0.2"
pandas = "^2.3.0"
polars = "^1.31.0"
pybtex = "^0.25.1"
jupyterlab = "^4.4.4"
jupyterlab-spreadsheet-editor = "^0.7.2"
plotly = "^6.7.0"
yamllint = "^1.38.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
